2007-03-08  Martin Baulig  <martin@ximian.com>

	* cs-parser.jay (constructor_header): Pass the location to the
	newly created TopLevelBlock.

2007-03-07  Martin Baulig  <martin@ximian.com>

	* statement.cs (Block.Resolve): Don't crash on error; bug #80715.

2007-03-06  Miguel de Icaza  <miguel@novell.com>

	* convert.cs (ExplicitReferenceConversionExists): Sync this method
	with the changes from David, fixes the build.

2007-03-05  David Mitchell  <dmitchell@logos.com>

	* convert.cs: Implement From System.Collecitons.Generic.IList<T>
	and its base interfaces to a one-dimensional array type S[],
	provided there is an implicit or explicit reference conversion
	from S to T.

2007-03-03  Marek Safar  <marek.safar@gmail.com>

	* cs-tokenizer.cs: Implemented basic linq grammar.

	* driver.cs: Set linq lang version on demand.

2007-02-26  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay, expression.cs: Compile empty __arglist correctly.

2007-02-25  Marek Safar  <marek.safar@gmail.com>

	* attribute.cs: Replaced DefinePInvoke in favor of S.R.E implementation
	(Fixes #80455)

	* class.cs (InterfaceMemberBase): Share common `extern' modifier checks
	here.
	Check property and event extern attributes.

	* codegen.cs (ModuleClass): HasDefaultCharSet when module defined global
	charset.

2007-02-24  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #80407
	* ecore.cs: Don't report ambiguity error when methods have same parent.

2007-02-23  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #80878
	* class.cs, cs-parser.jay: Event property can host anonymous methods.

2007-02-22  Marek Safar  <marek.safar@gmail.com>

	* attribute.cs: Enable ExtensionAttribute presence test.

2007-02-22  Marek Safar  <marek.safar@gmail.com>

	* class.cs: Warn about missing GetHashCode only when Equals is override.

	* decl.cs: Check accessibility of type arguments.

	* typemanager.cs: Correctly report nullable array.

2007-02-20  Marek Safar  <marek.safar@gmail.com>
